Fix assets not showing

--- a/register/style.css
+++ b/register/style.css
@@ -30,7 +30,7 @@
   position: absolute;
   height: 100%;
   width: 100%;
-  background-image: url("/assets/banner.png");
+  background-image: url("../assets/banner.png");
   background-size: 100%;
   animation: moving 30s linear infinite;
   animation-direction: alternate;
